kubernetes/main.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  defaultBackend:
    service:
      name: nginx
      port: 
        number: 80
  rules:
    - http:
        paths:
          - pathType: Exact
            path: /whoami
            backend:
              service:
                name: whoami
                port: 
                  number: 80
          # - pathType: Prefix
          #   path: /nginx
          #   backend:
          #     service:
          #       name: nginx
          #       port: 
          #         number: 80
